--- a/index.html
+++ b/index.html
@@ -1,317 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shravandika Ventures LLP</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<style>
-/* Custom Properties for easy theme management */
-:root {
-  --color-dark-bg: #1A1A1A;
-  --color-dark-alt: #2C2C2C;
-  --color-gold: #D4AF37;
-  --color-light-text: #F0F0F0;
-  --color-medium-text: #B0B0B0;
-  --font-heading: 'Playfair Display', serif;
-  --font-body: 'Montserrat', sans-serif;
-  --gradient-gold: linear-gradient(135deg, #FFD700 0%, #D4AF37 100%);
-  --gradient-dark: linear-gradient(135deg, #1A1A1A 0%, #0D0D0D 100%);
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Berry Boost - Pop Power Trends</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        /* CSS for the Pop Power Berry Boost Design */
+        :root {
+            --color-fuchsia: #FF0090; /* Bright Fuchsia Pink */
+            --color-red: #FF1010;     /* Fire-Engine Red */
+            --color-white: #FFFFFF;
+            --color-black: #1A1A1A;
+        }
 
-/* Base Styles & Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: var(--font-body);
-  line-height: 1.6;
-  color: var(--color-light-text);
-  background-color: var(--color-dark-bg);
-  overflow-x: hidden;
-}
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  position: relative;
-  z-index: 2;
-}
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--color-fuchsia);
+            color: var(--color-white);
+            overflow-x: hidden;
+        }
 
-/* Typography */
-h1, h2, h3 {
-  font-family: var(--font-heading);
-  color: var(--color-gold);
-  margin-bottom: 20px;
-  font-weight: 700;
-}
-h1 { font-size: 3.5em; line-height: 1.1; }
-h2 { font-size: 2.8em; line-height: 1.2; }
-h3 { font-size: 1.8em; line-height: 1.3; }
-p {
-  margin-bottom: 15px;
-  font-size: 1.1em;
-  color: var(--color-medium-text);
-}
-a {
-  color: var(--color-gold);
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-a:hover { color: var(--color-light-text); }
-.section-title {
-  text-align: center;
-  margin-bottom: 60px;
-  position: relative;
-  padding-bottom: 15px;
-}
-.section-title::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
-  width: 80px;
-  height: 3px;
-  background: var(--gradient-gold);
-  border-radius: 5px;
-}
+        /* --- Header/Navigation --- */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 5%;
+            background-color: var(--color-fuchsia);
+            border-bottom: 2px solid var(--color-white);
+            position: relative;
+            z-index: 10;
+        }
 
-/* Buttons */
-.btn {
-  display: inline-block;
-  padding: 14px 30px;
-  border-radius: 5px;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 1em;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-  border: none;
-  cursor: pointer;
-}
-.btn-gold {
-  background: var(--gradient-gold);
-  color: var(--color-dark-bg);
-  box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3);
-}
-.btn-gold:hover {
-  background: linear-gradient(135deg, #E0C100 0%, #BBAA22 100%);
-  box-shadow: 0 8px 20px rgba(212, 175, 55, 0.5);
-  transform: translateY(-2px);
-}
+        .logo {
+            font-family: 'Bebas Neue', cursive;
+            font-size: 2.5em;
+            letter-spacing: 3px;
+            color: var(--color-white);
+            text-decoration: none;
+        }
 
-/* Background Overlay */
-.background-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: 60px 60px;
-  opacity: 0.03;
-  z-index: 1;
-}
+        .nav a {
+            color: var(--color-white);
+            text-decoration: none;
+            margin-left: 30px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
 
-/* Hero Section */
-.hero-section {
-  background: var(--gradient-dark);
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  position: relative;
-  padding: 100px 0;
-  overflow: hidden;
-}
-.hero-section .hero-content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-}
-.hero-section .logo-area {
-  margin-bottom: 40px;
-}
-.hero-section .brand-logo {
-  max-width: 200px;
-  height: auto;
-  margin-bottom: 20px;
-  filter: drop-shadow(0 0 15px rgba(212, 175, 55, 0.5));
-}
-.hero-section .brand-name {
-  font-size: 3.5em;
-  letter-spacing: 2px;
-  text-shadow: 0 0 10px rgba(212, 175, 55, 0.3);
-}
-.hero-section .brand-tagline {
-  font-size: 1.3em;
-  font-weight: 500;
-  color: var(--color-gold);
-  letter-spacing: 1px;
-}
-.hero-text-area {
-  max-width: 800px;
-  margin: 0 auto;
-}
-.hero-text-area .section-title {
-  font-size: 3.5em;
-  margin-bottom: 25px;
-  padding-bottom: 0;
-}
-.hero-text-area .section-title::after { display: none; }
-.hero-description {
-  font-size: 1.3em;
-  color: var(--color-medium-text);
-  margin-bottom: 40px;
-}
-/* Hero shapes */
-.hero-section::before, .hero-section::after {
-  content: '';
-  position: absolute;
-  background: rgba(212, 175, 55, 0.05);
-  filter: blur(50px);
-  border-radius: 50%;
-  opacity: 0.7;
-  z-index: 0;
-}
-.hero-section::before { width: 300px; height: 300px; top: 10%; left: -5%; transform: rotate(45deg); }
-.hero-section::after { width: 400px; height: 400px; bottom: 5%; right: -10%; transform: rotate(-30deg); }
+        .nav a:hover {
+            color: var(--color-red);
+        }
 
-/* About Section */
-.about-section {
-  background-color: var(--color-dark-alt);
-  padding: 100px 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-.about-content { max-width: 900px; margin: 0 auto; }
+        /* --- Hero Section (The Big Splash) --- */
+        .hero {
+            position: relative;
+            height: 70vh; /* Adjust height as needed */
+            background-color: var(--color-red);
+            padding: 5% 5%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+        }
 
-/* Ventures Section */
-.ventures-section {
-  padding: 100px 0;
-  text-align: center;
-  background: var(--gradient-dark);
-  position: relative;
-  overflow: hidden;
-}
-.venture-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 40px;
-  margin-top: 50px;
-}
-.venture-item {
-  background-color: #222;
-  padding: 35px;
-  border-radius: 10px;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4), inset 0 0 0 1px rgba(212, 175, 55, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.venture-item::before {
-  content: '';
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: var(--gradient-gold);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  z-index: 0;
-}
-.venture-item:hover::before { opacity: 0.1; }
-.venture-item:hover { transform: translateY(-15px); }
+        .hero-text {
+            position: relative;
+            z-index: 2;
+        }
 
-/* Contact Section */
-.contact-section { padding: 100px 0; background-color: var(--color-dark-alt); text-align: center; }
-.contact-details p { margin-bottom: 15px; font-size: 1.1em; }
-.contact-form { max-width: 600px; margin: 30px auto 0; display: flex; flex-direction: column; gap: 15px; }
-.contact-form input, .contact-form textarea {
-  padding: 12px;
-  border-radius: 5px;
-  border: none;
-  font-size: 1em;
-}
-.contact-form button { align-self: center; }
+        .hero-text h1 {
+            font-family: 'Bebas Neue', cursive;
+            font-size: 8em;
+            line-height: 0.8;
+            margin: 0 0 20px 0;
+            color: var(--color-white);
+            text-shadow: 4px 4px var(--color-fuchsia); /* Pop effect */
+        }
 
-/* Footer */
-footer { padding: 30px 0; text-align: center; background-color: var(--color-dark-bg); color: var(--color-medium-text); }
-</style>
+        .hero-text p {
+            font-size: 1.5em;
+            margin-bottom: 40px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            background-color: var(--color-white);
+            color: var(--color-fuchsia);
+            padding: 15px 40px;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1.1em;
+            clip-path: polygon(10% 0, 100% 0, 90% 100%, 0% 100%); /* Diagonal edges */
+        }
+
+        .cta-button:hover {
+            background-color: var(--color-red);
+            color: var(--color-white);
+        }
+
+        .hero-image {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 50%;
+            background: url('placeholder-model.jpg') center/cover no-repeat;
+            clip-path: polygon(20% 0, 100% 0, 100% 100%, 0% 100%); /* Sharp, asymmetrical cut */
+            z-index: 1;
+        }
+
+        /* --- Content Grid & Dashboard --- */
+        .content-area {
+            display: grid;
+            grid-template-columns: 2fr 1fr; /* Two columns: main content and dashboard */
+            gap: 40px;
+            padding: 5%;
+            background-color: var(--color-fuchsia);
+        }
+
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 3-column product grid */
+            gap: 20px;
+        }
+
+        .product-item {
+            background-color: var(--color-white);
+            color: var(--color-black);
+            padding: 15px;
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+            border: 3px solid var(--color-red);
+        }
+
+        .product-item img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .product-title {
+            font-weight: 700;
+            font-size: 1.1em;
+            margin-top: 10px;
+            text-transform: uppercase;
+        }
+        
+        /* --- Style Trend-Meter Dashboard --- */
+        .dashboard {
+            background-color: var(--color-red);
+            padding: 30px;
+            border: 5px solid var(--color-white);
+            clip-path: polygon(0 0, 100% 5%, 100% 100%, 0% 95%); /* Dynamic slant effect */
+        }
+
+        .dashboard h2 {
+            font-family: 'Bebas Neue', cursive;
+            font-size: 2.5em;
+            margin-top: 0;
+            color: var(--color-white);
+            border-bottom: 3px dashed var(--color-white);
+            padding-bottom: 10px;
+        }
+
+        .trend-stats p {
+            font-size: 1.2em;
+            font-weight: 700;
+            margin: 10px 0;
+        }
+
+        .trend-stats span {
+            color: var(--color-white);
+            background-color: var(--color-fuchsia);
+            padding: 2px 8px;
+            margin-left: 5px;
+            clip-path: polygon(10% 0, 100% 0, 90% 100%, 0% 100%);
+        }
+
+        .chart-placeholder {
+            height: 150px;
+            background-color: var(--color-fuchsia);
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Bebas Neue', cursive;
+            font-size: 2em;
+            border: 3px solid var(--color-white);
+        }
+
+    </style>
 </head>
 <body>
 
-<header class="hero-section">
-  <div class="background-overlay"></div>
-  <div class="container hero-content-wrapper">
-    <div class="logo-area">
-      <img src="https://i.imgur.com/your-logo-image.png" alt="Shravandika Ventures LLP Logo" class="brand-logo">
-      <h1 class="brand-name">SHRAVANDIKA VENTURES LLP</h1>
-      <p class="brand-tagline">BUILDING VENTURES WITH INNOVATION AT THE CORE.</p>
-    </div>
-    <div class="hero-text-area">
-      <h2 class="section-title">Ventures Driven by Innovation</h2>
-      <p class="hero-description">Pioneering growth across diverse sectors with commitment to groundbreaking solutions and sustainable impact.</p>
-      <a href="#ventures" class="btn btn-gold">Explore Our Ventures</a>
-    </div>
-  </div>
-</header>
+    <header class="header">
+        <a href="#" class="logo">BERRY BOOST</a>
+        <nav class="nav">
+            <a href="#">New Arrivals</a>
+            <a href="#">Tops</a>
+            <a href="#">Bottoms</a>
+            <a href="#">Accessories</a>
+            <a href="#">SALE</a>
+        </nav>
+    </header>
 
-<section id="about" class="about-section">
-  <div class="container">
-    <h2 class="section-title">About Us</h2>
-    <div class="about-content">
-      <p>Shravandika Ventures LLP stands at the nexus of innovation and growth, meticulously building dynamic and sustainable enterprises. Our journey is defined by a relentless pursuit of new possibilities and a steadfast commitment to delivering unparalleled value across every project.</p>
-      <p>Specializing in commercial, retail, food-hospitality, and agri-exports, we are driven to foster significant market advancements. Our strategic approach ensures that every venture not only thrives but also sets new benchmarks for quality and foresight within its industry.</p>
-    </div>
-  </div>
-</section>
+    <section class="hero">
+        <div class="hero-text">
+            <p>TRENDS NOW</p>
+            <h1>UNLOCK YOUR STYLE.</h1>
+            <a href="#" class="cta-button">SHOP THE VIBE</a>
+        </div>
+        <div class="hero-image"></div>
+    </section>
 
-<section id="ventures" class="ventures-section">
-  <div class="background-overlay"></div>
-  <div class="container">
-    <h2 class="section-title">Our Core Ventures</h2>
-    <div class="venture-grid">
-      <div class="venture-item">
-        <i class="fas fa-building icon-gold"></i>
-        <h3>Commercial & Retail</h3>
-        <p>Crafting sophisticated commercial environments and innovative retail experiences that redefine urban landscapes and consumer engagement.</p>
-      </div>
-      <div class="venture-item">
-        <i class="fas fa-utensils icon-gold"></i>
-        <h3>Food - Hospitality</h3>
-        <p>Delivering premier culinary and hospitality ventures, encompassing diverse gastronomic concepts and luxury accommodation, all focused on impeccable service.</p>
-      </div>
-      <div class="venture-item">
-        <i class="fas fa-tractor icon-gold"></i>
-        <h3>Agri-Exports</h3>
-        <p>Streamlining the global export of premium agricultural produce, connecting sustainable local farming with international markets through robust supply chains.</p>
-      </div>
-      <div class="venture-item">
-        <i class="fas fa-lightbulb icon-gold"></i>
-        <h3>Innovation at the Core</h3>
-        <p>Infusing every business facet with cutting-edge innovation, from strategic planning to technological integration, ensuring pioneering growth and market leadership.</p>
-      </div>
-    </div>
-  </div>
-</section>
+    <section class="content-area">
+        <div class="product-grid">
+            <div class="product-item">
+                <img src="placeholder-top1.jpg" alt="Cyber Mesh Crop Top">
+                <div class="product-title">CYBER MESH CROP TOP</div>
+                <p>$39.99</p>
+            </div>
+            <div class="product-item">
+                <img src="placeholder-dress.jpg" alt="Neon Red Dress">
+                <div class="product-title">NEON RED MIDI DRESS</div>
+                <p>$69.99</p>
+            </div>
+            <div class="product-item">
+                <img src="placeholder-hat.jpg" alt="Fuchsia Beanie">
+                <div class="product-title">FUCHSIA POWER BEANIE</div>
+                <p>$19.99</p>
+            </div>
+            </div>
 
-<section id="contact" class="contact-section">
-  <div class="container">
-    <h2 class="section-title">Connect With Us</h2>
-    <div class="contact-details">
-      <p><i class="fas fa-user icon-gold"></i> Shatavarth R. Warulkar</p>
-      <p><i class="fas fa-briefcase icon-gold"></i> Managing Director</p>
-      <p><i class="fas fa-phone-alt icon-gold"></i> +91 7719911010</p>
-      <p><i class="fas fa-envelope icon-gold"></i> <a href="mailto:hello@reallygreatsite.com">hello@reallygreatsite.com</a></p>
-      <p><i class="fas fa-globe icon-gold"></i> <a href="https://www.shravandikaventures.in" target="_blank">www.shravandikaventures.in</a></p>
-    </div>
-    <form class="contact-form">
+        <aside class="dashboard">
+            <h2>STYLE TREND-METER</h2>
+            <div class="trend-stats">
+                <p>TOPS: <span>85% SELLING FAST</span></p>
+                <p>NEW ARRIVALS: <span>60% VIEWED TODAY</span></p>
+                <p>HOT CATEGORY: <span>ACCESSORIES</span></p>
+            </div>
+            <div class="chart-placeholder">
+                ANIMATED CHART PLACEHOLDER
+            </div>
+            <a href="#" class="cta-button" style="margin-top: 20px; display: block; background-color: var(--color-white); color: var(--color-red);">VIEW ALL TRENDS</a>
+        </aside>
+    </section>
+
+    <footer style="background-color: var(--color-red); padding: 30px; text-align: center;">
+        Berry Boost &copy; 2025. Pop Power Fashion.
+    </footer>
+
+</body>
+</html>
