--- a/index.html
+++ b/index.html
@@ -222,17 +222,17 @@
             <div class="product-item">
                 <img src="placeholder-top1.jpg" alt="Cyber Mesh Crop Top">
                 <div class="product-title">CYBER MESH CROP TOP</div>
-                <p>$39.99</p>
+                <p>₹1999</p>
             </div>
             <div class="product-item">
                 <img src="placeholder-dress.jpg" alt="Neon Red Dress">
                 <div class="product-title">NEON RED MIDI DRESS</div>
-                <p>$69.99</p>
+                <p>₹2999</p>
             </div>
             <div class="product-item">
                 <img src="placeholder-hat.jpg" alt="Fuchsia Beanie">
                 <div class="product-title">FUCHSIA POWER BEANIE</div>
-                <p>$19.99</p>
+                <p>₹999</p>
             </div>
             </div>
 
@@ -251,7 +251,7 @@
     </section>
 
     <footer style="background-color: var(--color-red); padding: 30px; text-align: center;">
-        Berry Boost &copy; 2025. Pop Power Fashion.
+        Berry Boost by Vedika &copy; 2025. Pop Power Fashion.
     </footer>
 
 </body>
